--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         <div class="bottom-bar">
             <div class="container">
                 <div class="row">
-                    <small class="copyright col-lg-6 col-12">All Copyright @ <a href="#">Group-B</a></small>
+                    <small class="copyright col-lg-6 col-12">All Copyright @ <a href="#" ATU Assuit Technology Unvirsity></a></small>
                 </div>
             </div>
         </div>
